# useglad

./: CMakeLists.txt  conanfile.txt
cmake/: conan_support.cmake
src/: useglad.cpp
